2008-09-18  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Data/ColumnDescription.cs: Add a LongTitle
	property.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/DefaultColumnController.cs:
	Use the QueryField.ShortLabel in the ColumnDescription for the Title, and
	set the LongTitle to the field's Label property.

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Header.cs: Use
	the LongTitle in the menus.

2008-09-18  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellPublished.cs:
	Use the new SetMinMaxStrings method in ColumnCellText to define the
	min/max widths for these columns.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellUnheard.cs:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellDownloadStatus.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellQueryText.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellDateTime.cs:
	Update to new ColumnCellText API, replacing the Text property with a
	GetText method so we can get the text for any arbitrary object (the
	min/max strings, for example) instead of just the bound object.

	* src/Core/Banshee.Services/Banshee.Query/BansheeQuery.cs: Add ShortLabels
	for a few fields, and make sorting by Grouping the same as sorting by
	track.

	* src/Libraries/Hyena/Hyena.Query/QueryField.cs: Add a ShortLabel property
	that default to the value of Label.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/XmlColumnController.cs:
	Only set the min/max widths if they were actually specified in the XML.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellFileSize.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellTrackNumber.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellPositiveInt.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellDuration.cs: