@@ -1,3 +1,9 @@
+2008-09-18  Aaron Bockover  <abock@gnome.org>
+
+	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Header.cs:
+	Force the foreground color of embedded menu labels in the prelight state
+	to use the foreground color from the selected state (BGO #524897)
+
 2008-09-18  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/Libraries/Hyena/Hyena.Data/ColumnDescription.cs: Add a LongTitle
